--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -5,22 +5,13 @@
 </div>
 
 <div id=queue>
-  <table>
-    <tr>
-      <th>Camosun ID</th>
-      <th>Student Name</th>
-      <th>Request Type</th>
-      <th>Request info</th>
-      <th></th>
-    </tr>
     <% @requests.each do |request| %>
-      <tr>
-        <td><%= request.user.camosun_id %> </td>
-        <td><%= request.user.first_name + request.user.last_name %></td>
-        <td><%= request.queue_type %></td>
-        <td><%= request.info %></td>
-        <td><%= link_to "Completed", request, method: :delete %><td>
-      </tr>
+      <div class=request>
+        <span class=Submitter_name>Submitter: <%= request.user.full_name %></span>
+        <span class=request_info><%= request.info %></span>
+        <span class=delete_request><%= link_to "Completed", request, method: :delete %></span>
+      </div>
       <% end %>
   </table>
 </div>
+
