Welcome page design

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,36 @@
-<h1>Welcome to the Student Queeue Project</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>SQP</title>
+    <%= stylesheet_link_tag    'application', media: 'all',
+                                              'data-turbolinks-track': 'reload' %>
+  </head>
+  <body>
+      <div class="container">
+          <div class="center-block">
+          <div class="title text-center">
+              <h1>Welcome to </h1>
+              <h1>The Student Queue Project</h1>
+              <hr>
+          </div>
+          
+         
+          <div class="logo">
+              <div class="pull-right" id="team-logo">
+                  <img alt="Team BUDS logo" src="/assets/buds_bigger.png" id="teamlogo" />
+              </div>
+              
+              <div  class="pull-left" id="schoollogo">
+                  <img alt="Camosun logo" src="/assets/camosun-logo-print.png" />
+              </div>
+          </div>
+          <div class ="link text-center">
+              <p>
+                 SQP Comming Soon!!
+              </p>
+          </div>
+          
+          </div>    
+      </div>
+  </body>
+</html>
