--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,88 @@
-// Place all the styles related to the Welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+/* mixins, variables, etc. */
+
+$light-grey: #f4f4f4;
+$brown-grey: #393333;
+$heavy-green: #7ca12e;
+$heavy-grey: #5a5a5a;
+$dark-blue: #3f5f88;
+$light-green: #91bd36;
+$white: #FFFFFF;
+
+
+/* universal */
+body{
+    background:#ddd url(background.jpg) no-repeat center center;
+    background-size: cover;
+    font-family: "NeueHaas",sans-serif;
+}
+
+.title{
+    margin-top: 60px;
+    margin-bottom: 60px;
+    h1{
+        color: $heavy-grey; 
+        font-family: Verdana, sans-serif;
+        font-size: 60px;
+        text-align: center;
+    }
+    
+    
+    hr {
+    	border-top: 1px solid $dark-blue;
+    	text-align: center;
+    }
+    
+}
+
+
+.logo{
+    width: auto;
+    height: 300px;
+    padding: 10px 10px 10px 10px;
+    background-image: url(blur.png);
+    background-size: cover;
+
+    #team-logo{
+        width: 530px;
+        Height: 220px;
+    }
+    
+    #teamlogo{
+       width: 500px;
+       Height: 223px;
+    }
+    
+    #schoollogo{
+        width: 530px;
+        Height: 220px;
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+    
+}
+
+
+
+.link{
+    margin-top: 20px;
+    p{
+        font-family: sans-serif;
+        font-size: 20px;
+        color: $brown-grey;
+    }
+}
+
+
+/* Hide debug info */
+
+.debug_dump{
+    clear: both;
+    float: left;
+    width: 100%;
+    margin-top: 45px;
+    @include box-sizing(border-box);
+}
+
