Added application css

--- a/app/views/layouts/_studentheader.html.erb
+++ b/app/views/layouts/_studentheader.html.erb
@@ -7,7 +7,7 @@
         <li><%= link_to "Manage Users",   '#' %></li>
         <li><%= link_to "Add User",   '#' %></li>
         <li><%= link_to "Log Out",   '#' %></li>
-        <li><h3>Instructor View</h3></li>
+        <li><h3>Student View</h3></li>
       </ul>
     </nav>
   </div>
