--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
         Camosun Id: <%= @user.camosun_id %>
       </p>
       <%= link_to "Show Request", request_path %>
+      <%= link_to "New Request", new_request_path %>
       <%= link_to "Log out", logout_path, method: :delete %>
     </section>
   </aside>
