Added links to login page from welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,7 +26,7 @@
           </div>
           <div class ="link text-center">
               <p>
-                 SQP Comming Soon!!
+                 <%= link_to "Enter to the Student Queue Manager", login_path %>
               </p>
           </div>
           
