--- a/app/views/layouts/_studentheader.html.erb
+++ b/app/views/layouts/_studentheader.html.erb
@@ -1,6 +1,5 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to "Student Queue Manager", '#', id: "app" %>
+<header class="navbar navbar-fixed-top navbar-custom">
+    <h1 id="appLogo">Student Queue Manager</h1>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Manage Requests",   '#' %></li>
@@ -10,5 +9,4 @@
         <li><h3>Student View</h3></li>
       </ul>
     </nav>
-  </div>
 </header>
