--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
   </head>
   <body>
       <div class="container">
-          <div class="center-block">
+          <div class="center-block welcome">
           <div class="title text-center">
               <h1>Welcome to </h1>
               <h1>The Student Queue Project</h1>
