--- a/app/views/layouts/_loginheader.html.erb
+++ b/app/views/layouts/_loginheader.html.erb
@@ -1,10 +1,9 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to "Student Queue Manager", '#', id: "app" %>
+<header class="navbar navbar-fixed-top navbar-custom">
+  
+    <h1 id="appLogo">Student Queue Manager</h1>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li>Sign On</li>
+        <li id="sub-title">Sign On</li>
       </ul>
     </nav>
-  </div>
 </header>
