Adjusted stu & inst header

--- a/app/views/layouts/_loginheader.html.erb
+++ b/app/views/layouts/_loginheader.html.erb
@@ -3,7 +3,7 @@
     <h1 id="appLogo">Student Queue Manager</h1>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li id="sub-title">Sign On</li>
+        <li class="sub-title">Sign On</li>
       </ul>
     </nav>
 </header>
