--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -45,9 +45,37 @@ body{
   
 }
 
-#sub-title{
+.sub-title{
   padding-top: 9px;
   font-size: 1.7em;
   font-family: Verdana, sans-serif;
   color: $white;
+  margin-left: 5px;
+}
+
+#username{
+    float: left;
+    font-family: Verdana, sans-serif;
+    font-size: 1em;
+    color: $white;
+    padding-top: 9px;
+    margin-right: 5px;
+    margin-top: 22px;
+    margin-left: 5px;
+}
+
+.links{
+    margin-top: 15px;
+    color: $white;
+    font-family: Verdana, sans-serif;
+    font-size: 1em;
+    
+    a{
+        color:$white;
+    }
+    
+    a:hover{
+        color: $dark-blue;
+    }
+    
 }
