--- a/app/views/layouts/_studentheader.html.erb
+++ b/app/views/layouts/_studentheader.html.erb
@@ -1,12 +1,12 @@
 <header class="navbar navbar-fixed-top navbar-custom">
     <h1 id="appLogo">Student Queue Manager</h1>
+    <p id ="username"> Logged in As:  <%= @current_user.full_name %></p>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Manage Requests",   '#' %></li>
-        <li><%= link_to "Manage Users",   '#' %></li>
-        <li><%= link_to "Add User",   '#' %></li>
-        <li><%= link_to "Log Out",   '#' %></li>
-        <li><h3>Student View</h3></li>
+        <li class="links"><%= link_to "Add Request",   '#' %></li>
+        <li class="links"><%= link_to "Show Request",   '#' %></li>
+        <li class="links"><%= link_to "Log Out", logout_path, method: :delete%></li>
+        <li class="sub-title"><h3>Student View</h3></li>
       </ul>
     </nav>
 </header>
