--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
       <title>SQP | Add Request</title>
+      <%= javascript_include_tag "application" %>
       <%= stylesheet_link_tag    'application', media: 'all',
                                                 'data-turbolinks-track': 'reload' %>
   </head>
