--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -11,53 +11,63 @@
     
     
     <div class="container contents">
-      <h1>Submit Request</h1>
-      <button id="question">Question</button>
-        <button id="support">Support</button>
-        <button id="demo">Demo</button>
-        
-      <div class="question">
-        
-        
-        <%= form_for(@request) do |f| %>
-          
-          <label>Question</label>
-          <br>
-          <%= f.hidden_field :queue_type, :value => "question" %>
-          <%= f.label :info %>
-          <%= f.text_area :info, class: 'form-control' %>
-          
-          <%= f.submit "Submit your Request", class: "btn btn-primary" %>
-        <% end %>
+      <h1>Select your Request Type: </h1>
+      <div class ="request_type row">
+        <div class="col-md-4 text-center">
+          <button class="btn btn-primary" id="question">Question</button>
+        </div>
+        <div class="col-md-4 text-center">
+          <button class="btn btn-primary" id="support">Support</button>
+        </div>
+        <div class="col-md-4 text-center">
+          <button class="btn btn-primary" id="demo">Demo</button>
+        </div>
       </div>
-  
-      <div class="support">
-          
+      <div class="form_bg">
+        <div class="question">
           <%= form_for(@request) do |f| %>
             
-            <label>Support</label>
+            <h4>Selected Type: Question</h4>
+            <hr>
+            <br>
+            <%= f.hidden_field :queue_type, :value => "question" %>
+            <%= f.label :info %>
+            <%= f.text_area :info, class: 'form-control' %>
+            <br>
+            <%= f.submit "Submit your Request", class: "btn btn-primary" %>
+          <% end %>
+        </div>
+    
+        <div class="support">
+            
+          <%= form_for(@request) do |f| %>
+            
+            <h4>Selected Type: Support</h4>
+            <hr>
             <br>
             <%= f.hidden_field :queue_type, :value => "support" %>
             <%= f.label :info %>
             <%= f.text_area :info, class: 'form-control' %>
-            
+            <br>
             <%= f.submit "Submit your Request", class: "btn btn-primary" %>
           <% end %>
         </div>
-        
+          
         <div class="demo">
         
-        <%= form_for(@request) do |f| %>
-          
-          <label>Demo</label>
-          <br>
-          <%= f.hidden_field :queue_type, :value => "Demo" %>
-          <%= f.label :info %>
-          <%= f.text_area :info, class: 'form-control' %>
-          
-          <%= f.submit "Submit your Request", class: "btn btn-primary" %>
-        <% end %>
+          <%= form_for(@request) do |f| %>
+            
+            <h4>Selected Type: Demo</h4>
+            <hr>
+            <br>
+            <%= f.hidden_field :queue_type, :value => "Demo" %>
+            <%= f.label :info %>
+            <%= f.text_area :info, class: 'form-control' %>
+            <br>
+            <%= f.submit "Submit your Request", class: "btn btn-primary" %>
+          <% end %>
+        </div>
       </div>
-      </div>
-    </body>
+    </div>
+  </body>
 </html>
