--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>SQP | Submit Request</title>
-      <%= stylesheet_link_tag    'application', media: 'all',
-                                              'data-turbolinks-track': 'reload' %>
+    <title>SQP | Submit Request</title>
+    <%= stylesheet_link_tag    'application', media: 'all',
+                                            'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
@@ -60,7 +60,7 @@
             <h4>Selected Type: Demo</h4>
             <hr>
             <br>
-            <%= f.hidden_field :queue_type, :value => "Demo" %>
+            <%= f.hidden_field :queue_type, :value => "demo" %>
             <%= f.label :info %>
             <%= f.text_area :info, class: 'form-control' %>
             <br>
