--- a/app/assets/stylesheets/requests.scss
+++ b/app/assets/stylesheets/requests.scss
@@ -20,6 +20,11 @@ $white-trans: rgba(255, 255, 255, 0.4);
     	border-top: 1px solid $dark-blue;
     	text-align: center;
     }
+    
+    .info-box{
+    		width: 100%;
+    		height: 150px;
+    }
 }
 
 .request_type{
