--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container contents">
-  <h1>Select your Request Type: </h1>
+  <h1>Select your Request Type</h1>
   <div class ="request_type row">
     <div class="col-md-4 text-center">
       <button class="btn btn-primary" id="question">Question</button>
