--- a/app/views/layouts/_studentheader.html.erb
+++ b/app/views/layouts/_studentheader.html.erb
@@ -1,9 +1,9 @@
 <h1 id="appLogo">Student Queue Manager</h1>
-<p id ="username"> Logged in As:  <%= @current_user.full_name %></p>
+<p id ="username"> Logged in As:  <%= current_user.full_name %></p>
 <nav>
   <ul class="nav navbar-nav navbar-right">
     <li class="links"><%= link_to "Add Request", new_request_path %></li>
-    <li class="links"><%= link_to "Show Request", "X" %></li>
+    <li class="links"><%= link_to "Show Request", current_user.request %></li>
     <li class="links"><%= link_to "Log Out", logout_path, method: :delete%></li>
     <li class="sub-title"><h3>Student View</h3></li>
   </ul>
