--- a/app/views/layouts/_instructorheader.html.erb
+++ b/app/views/layouts/_instructorheader.html.erb
@@ -2,9 +2,9 @@
 <p id ="username"> Logged in As:  <%= current_user.full_name %></p>
 <nav>
   <ul class="nav navbar-nav navbar-right">
-    <li class="links"><%= link_to "Manage Requests",   manage_requests_path %></li>
-    <li class="links"><%= link_to "Manage Users",   manage_users_path %></li>
-    <li class="links"><%= link_to "Add User",   '#' %></li>
+    <li class="links"><%= link_to "Manage Requests", manage_requests_path %></li>
+    <li class="links"><%= link_to "Manage Users", manage_users_path %></li>
+    <li class="links"><%= link_to "Add Users", new_user_path %></li>
     <li class="links"><%= link_to "Log Out", logout_path, method: :delete %></li>
     <li class="sub-title"><h3>Instructor View</h3></li>
   </ul>
