Fixed add request bug

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>SQP | Submit Request</title>
-    <%= stylesheet_link_tag    'application', media: 'all',
-                                            'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all'%>
   </head>
   <body>
     <%=render 'layouts/studentheader' %>
