--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -22,7 +22,7 @@
         <%= f.label :info %>
         <%= f.text_area :info, class: 'form-control' %>
         <br>
-        <%= f.submit "Submit your Request", class: "btn btn-primary" %>
+        <%= f.submit "Submit your Request", class: "btn btn-primary  pull-right" %>
       <% end %>
     </div>
 
@@ -37,7 +37,7 @@
         <%= f.label :info %>
         <%= f.text_area :info, class: 'form-control' %>
         <br>
-        <%= f.submit "Submit your Request", class: "btn btn-primary" %>
+        <%= f.submit "Submit your Request", class: "btn btn-primary  pull-right" %>
       <% end %>
     </div>
       
@@ -52,7 +52,7 @@
         <%= f.label :info %>
         <%= f.text_area :info, class: 'form-control' %>
         <br>
-        <%= f.submit "Submit your Request", class: "btn btn-primary" %>
+        <%= f.submit "Submit your Request", class: "btn btn-primary pull-right" %>
       <% end %>
     </div>
   </div>
