--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -13,7 +13,7 @@ $white:       #FFFFFF;
 
 /* universal */
 body{
-    background:#ddd url(background.jpg) no-repeat center center;
+    background:#ddd url(background.png) no-repeat center center;
     background-size: cover;
     font-family: "NeueHaas",sans-serif;
 }
