--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,7 +25,7 @@
           </div>
           <div class ="link text-center">
               <p>
-                 <%= link_to "Enter to the Student Queue Manager", login_path %>
+                 <button class= "btn-block"><%= link_to "Enter to the Student Queue Manager", login_path %></button>
               </p>
           </div>
           
