--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,27 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+/* mixins, variables, etc. */
+
+$light-grey:  #f4f4f4;
+$brown-grey:  #393333;
+$heavy-green: #7ca12e;
+$heavy-grey:  #5a5a5a;
+$dark-blue:   #3f5f88;
+$light-green: #91bd36;
+$white:       #FFFFFF;
+$white-trans: rgba(255, 255, 255, 0.4);
+
+.user{
+	width: 100%;
+    display: block;
+    background-color:$white;
+    padding: 12px 7px 7px 7px ;
+    border-radius: 0.15em;
+    border-style: solid;
+    border-width: 1px;
+    border-color: $dark-blue;
+    border-left: 5px solid $dark-blue;
+    //transition: background .3s ease;
+    min-height: 50px;
+}
