--- a/app/views/layouts/_instructorheader.html.erb
+++ b/app/views/layouts/_instructorheader.html.erb
@@ -2,7 +2,7 @@
 <p id ="username"> Logged in As:  <%= current_user.full_name %></p>
 <nav>
   <ul class="nav navbar-nav navbar-right">
-    <li class="links"><%= link_to "Manage Requests", manage_requests_path %></li>
+    <li class="links"><%= link_to "Manage Requests", manage_requests_path(queue_type: "question") %></li>
     <li class="links"><%= link_to "Manage Users", manage_users_path %></li>
     <li class="links"><%= link_to "Add Users", new_user_path %></li>
     <li class="links"><%= link_to "Log Out", logout_path, method: :delete %></li>
