--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li class="request">
   <div class="theme">
     <h4><b class="arrow"></b>Submitter: <%=request.user.full_name%></h4>
   </div>
@@ -9,4 +9,4 @@
       <%= link_to "Complete", request, method: :delete, class: "btn btn-primary pull-right" %>
   </div>
 </li>
-<br>
+
