Add a Check if request exists before showing it
This only happens when rendering a request through the partial
which you should most of the time be doing.

--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -1,12 +1,12 @@
-
+<% unless request.blank? %>
 <li class="request">
   <div class="theme">
-    <h4><b class="arrow"></b>Submitter: <%=request.user.full_name%></h4>
+    <h4><b class="arrow"></b>Submitter: <%= request.user.full_name %></h4>
   </div>
   <div class="abstract">
-    
-      <textarea readonly = "true", class ="form-control info-box"  ><%= request.info %></textarea>
-      <br>
-      <%= link_to "Complete", request, method: :delete, class: "btn btn-primary pull-right" %>
+    <textarea readonly = "true", class ="form-control info-box"><%= request.info %></textarea>
+    <br>
+    <%= link_to "Complete", request, method: :delete, class: "btn btn-primary pull-right" %>
   </div>
 </li>
+<% end %>
