Add time since submittal for requests

--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -1,12 +1,13 @@
 <% unless request.blank? %>
-<li class="request">
-  <div class="theme">
-    <h4><b class="arrow"></b>Submitter: <%= request.user.full_name %></h4>
-  </div>
-  <div class="abstract">
-    <textarea readonly = "true", class ="form-control info-box"><%= request.info %></textarea>
-    <br>
-    <%= link_to "Complete", request, method: :delete, class: "btn btn-primary pull-right" %>
-  </div>
-</li>
+  <li class="request">
+    <div class="theme">
+      <h4><b class="arrow"></b>Submitter: <%= request.user.full_name %> 
+        Submitted: <%= time_ago_in_words(request.created_at) %> ago </h4>
+    </div>
+    <div class="abstract">
+      <textarea readonly = "true", class ="form-control info-box"><%= request.info %></textarea>
+      <br>
+      <%= link_to "Complete", request, method: :delete, class: "btn btn-primary pull-right" %>
+    </div>
+  </li>
 <% end %>
