--- a/app/views/requests/_requests_types.html.erb
+++ b/app/views/requests/_requests_types.html.erb
@@ -1,7 +1,7 @@
-<div>
-  <h2>Selected Type: <%= queue_type.titleize %></h2>
+<div id="requests_page">
+  <h2>Selected Type: <%= @queue_type.titleize %></h2>
   <hr>
   <ul class="accordion" id="requests">
-    <%= render requests %>
+    <%= render @requests %>
   </ul>
 </div>
