Rename partial to be more clear

--- a/app/views/requests/_requests_for_queue_type.html.erb
+++ b/app/views/requests/_requests_for_queue_type.html.erb
@@ -1,4 +1,4 @@
-<div id="requests_page">
+<div>
   <h2>Selected Type: <%= @queue_type.titleize %></h2>
   <hr>
   <ul class="accordion" id="requests">
