--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -14,5 +14,5 @@
     </div>
   </div>
 <div class="form_bg" id="requests">
-  <%= render partial: 'requests_types' %>
+  <%= render partial: 'requests_for_queue_type' %>
 </div>
