Fixed welcome btn

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,7 +25,7 @@
           </div>
           <div class ="link text-center">
               <p>
-                 <button class= "btn-block"><%= link_to "Enter to the Student Queue Manager", login_path %></button>
+                 <%= button_to "Enter to the Student Queue Manager", login_path, method: :get, :class => "welcomebtn btn-block" %>
               </p>
           </div>
           
