--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -62,7 +62,7 @@ $white:       #FFFFFF;
     
     .link{
         margin-top: 20px;
-        p{
+        .welcomebtn{
             font-family: sans-serif;
             font-size: 20px;
             color: $brown-grey;
