Add dynamic titles

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Manage Requests" %>
 <div class="container contents" id="manage_requests_page">
   <div class="request_type row">
     <div class="col-md-4 text-center">
