--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Your Request" %>
 <div class= "container contents form_bg">
 	<h2>Requested Type: <%= @request.queue_type.capitalize %></h2>
 	<hr>
