--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,19 +1,8 @@
 <% content_for :title, "Manage Requests" %>
+
 <div class="container contents" id="manage_requests_page">
-  <div class="request_type row">
-    <div class="col-md-4 text-center">
-        <%= link_to "Question", manage_requests_path(queue_type: "question"), 
-          {class:"btn btn-primary"} %>
-    </div>
-    <div class="col-md-4 text-center">
-        <%= link_to "Support", manage_requests_path(queue_type: "support"), 
-          {class:"btn btn-primary"} %>
-    </div>
-    <div class="col-md-4 text-center">
-        <%= link_to "Demo", manage_requests_path(queue_type: "demo"), 
-          {class:"btn btn-primary"} %>
-    </div>
+  <%= render partial: 'queue_types' %>
+  <div class="form_bg" id="requests">
+    <%= render partial: 'requests_for_queue_type' %>
   </div>
-<div class="form_bg" id="requests">
-  <%= render partial: 'requests_for_queue_type' %>
 </div>
