--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -35,6 +35,11 @@ body{
 .navbar{
    padding-right: 60px;
    padding-left: 30px;
+  
+  .not-active {
+    pointer-events: none;
+    cursor: default;
+  }
 }
 
 #appLogo {
@@ -88,3 +93,4 @@ body{
 .request {
    margin-bottom: 2em; 
 }
+
