--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -1,7 +1,7 @@
 <% unless request.blank? %>
   <li class="request">
     <div class="theme">
-      <h4><b class="arrow"></b>Submitter: <%= request.user.full_name %> 
+      <h4><b class="arrow"></b>Submitter: <%= request.user.full_name %>&nbsp;&nbsp; 
         Submitted: <%= time_ago_in_words(request.created_at) %> ago </h4>
     </div>
     <div class="abstract">
