--- a/app/views/requests/_delete_options.html.erb
+++ b/app/views/requests/_delete_options.html.erb
@@ -1,2 +1,2 @@
-<%= link_to "Destroy All #{@queue_type.titleize}s", '#', {class:'btn btn-danger'} %>
-<%= link_to "Destroy All Requests", '#', {class:'btn btn-danger'} %>
+<%= link_to "Remove #{@queue_type.titleize} Requests", destroy_all_current_type_requests_path, {class:'btn btn-danger'} %>
+<%= link_to "Remove All Requests", destroy_all_requests_path, {class:'btn btn-danger'} %>
