Add delete all students button

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,5 +12,8 @@
     </div>
     <br>
   <% end %>
+  <div class= "text-center">
+    <%= link_to "Delete All Students", delete_all_users_path, :method => :get, class: "btn btn-primary" %>
+  </div>
 </div>
 </div>
