Really fix Remove current queue type's request
The issue here is that I wasn't actually getting the queue_type
from the index action into the delete action. I added the
queue_type as a param to the link to destroy and that fixed it.

--- a/app/views/requests/_delete_options.html.erb
+++ b/app/views/requests/_delete_options.html.erb
@@ -1,6 +1,6 @@
 <%= link_to(
   "Remove #{@queue_type.titleize} Requests", 
-  destroy_all_current_queue_type_requests_path,
+  destroy_all_current_queue_type_requests_path(queue_type: @queue_type),
   method: :delete,
   data: {confirm: "Are you sure?"},
   class:'btn btn-danger')%>
