improved delete request btn layouts

--- a/app/views/requests/_delete_options.html.erb
+++ b/app/views/requests/_delete_options.html.erb
@@ -4,6 +4,7 @@
   method: :delete,
   data: {confirm: "Are you sure?"},
   class:'btn btn-danger')%>
+&nbsp;&nbsp;
 <%= link_to(
   "Remove All Requests", 
   destroy_all_requests_path,
