--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -6,6 +6,8 @@
   <div class="form_bg" id="requests">
     <%= render partial: 'requests_for_queue_type' %>
   </div>
-  
-  <%= render partial: 'delete_options' %>
+  <br>
+  <div class = "text-center">
+    <%= render partial: 'delete_options' %>
+  </div>
 </div>
