--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>SQP</title>
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= favicon_link_tag 'favicon.ico' %>
   </head>
   <body>
       <div class="container">
